Add enabled flags to CSV and Parquet output
- Added 'enabled' field to CSVConfig and ParquetConfig structs
- Writers only initialize when enabled=true in config
- Updated all config files with enabled flags
- config.yaml: both CSV and Parquet enabled (default)
- config.continuous.yaml: only Parquet enabled
- config.kafka.yaml: both disabled (Kafka-only mode)
- Added config.test.yaml for testing no-output mode
- Allows pure Kafka streaming without file writes

--- a/config.continuous.yaml
+++ b/config.continuous.yaml
@@ -8,7 +8,10 @@ producer:
 output:
   format: "parquet"
   directory: "./output"
+  csv:
+    enabled: false
   parquet:
+    enabled: true
     filename: "transactions.parquet"
     row_group_size: 50000
     compression: "snappy"
