--- a/config.kafka.yaml
+++ b/config.kafka.yaml
@@ -7,7 +7,10 @@ producer:
 output:
   format: "parquet"
   directory: "/app/output"
+  csv:
+    enabled: false
   parquet:
+    enabled: false
     filename: "transactions.parquet"
     row_group_size: 50000
     compression: "snappy"
